--- a/dialogues/2.html
+++ b/dialogues/2.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="contents">
-        <p>Yeah <br> you!</p>
+        <p>you fell for it didnt you!</p>
     </div>
     <link rel="stylesheet" href="index2.css">
    
