--- a/dialogues/3.html
+++ b/dialogues/3.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <div class="contents">
-        <p>There is an important message you need to know..</p>
+        <p>crystalsite will still be updated for the time being <br>
+        with some intresting things currently being working on</p>
     </div>
     <link rel="stylesheet" href="index2.css">
    
