--- a/dialogues/4.html
+++ b/dialogues/4.html
@@ -9,9 +9,7 @@
 </head>
 <body>
     <div class="contents">
-        <p>As of April 4, 2025, this site will recieve no more updates, making it officially obsolete.
-           This is due to me getting tired of working on this project I had since january 2024.
-        </p>
+        <p>well, anyways..</p>
     </div>
     <link rel="stylesheet" href="index2.css">
    
