--- a/dialogues/5.html
+++ b/dialogues/5.html
@@ -9,10 +9,7 @@
 </head>
 <body>
     <div class="contents">
-        <p>But <br> 
-            by that time, there will be a huge addition of more games (15+), just to send out a 
-            farewell to this site.
-        </p>
+        <p>heres 7 games</p>
     </div>
     <link rel="stylesheet" href="index2.css">
    
