--- a/index.html
+++ b/index.html
@@ -93,6 +93,12 @@
           <img src="/gamethumbnails/boxingrandomthumb.png" class="gamethumbs" />
           Boxing Random
         </button>
+        <button id="buttonburrito" class="gamebuttons" title="Click to play">
+          Burrito Bison: Launcha Libre
+        </button>
+        <button id="buttoncell" class="gamebuttons" title="Click to play">
+          Cell Machine
+        </button>
         <button id="buttonchrome" class="gamebuttons" title="Click to play">
           <img src="/gamethumbnails/chromethumb.png" class="gamethumbs" />
           Chrome Dino Game
@@ -100,6 +106,9 @@
         <button id="buttoncluster" class="gamebuttons" title="Click to play">
           <img src="/gamethumbnails/clusterthumb.jpg" class="gamethumbs" />
           Cluster Rush
+        </button>
+        <button id="buttoncolor" class="gamebuttons" title="Click to play">
+          Color Switch
         </button>
         <button id="buttoncookie" class="gamebuttons" title="Click to play">
           <img src="/gamethumbnails/cookieclickerthumb.png" class="gamethumbs" />
@@ -181,6 +190,9 @@
           <img src="/gamethumbnails/joyridethumb.png" class="gamethumbs" />
           Jetpack Joyride
         </button>
+        <button id="buttonmarvin" class="gamebuttons" title="Click to play">
+          Marvin Spectrum
+        </button>
         <button id="buttonmonkey" class="gamebuttons" title="Click to play">
           <img src="/gamethumbnails/monkeythumb.png" class="gamethumbs" />
           Monkey Mart
@@ -209,6 +221,9 @@
           <img src="/gamethumbnails/radiusthumb.png" class="gamethumbs" />
           Radius Raid
         </button>
+        <button id="buttonresent" class="gamebuttons" title="Click to play">
+          Resent Client
+        </button>
         <button id="buttonroots" class="gamebuttons" title="Click to play">
           <img src="/gamethumbnails/rootsthumb.jpg" class="gamethumbs" />
           Roots 
@@ -224,6 +239,9 @@
         <button id="buttonsoccer" class="gamebuttons" title="Click to play">
           <img src="/gamethumbnails/soccerrandomthumb.png" class="gamethumbs" />
           Soccer Random
+        </button>
+        <button id="buttonskills" class="gamebuttons" title="Click to play">
+          Soccer Skills
         </button>
         <button id="buttonstack" class="gamebuttons" title="Click to play">
           <img src="/gamethumbnails/stackthumb.png" class="gamethumbs" />
@@ -252,6 +270,9 @@
         <button id="buttonthefinal" class="gamebuttons" title="Click to play">
           <img src="gamethumbnails/finalthumb.png" class="gamethumbs" />
           The Final Earth 2
+        </button>
+        <button id="buttonthehotel" class="gamebuttons" title="Click to play">
+          The Hotel
         </button>
         <button id="buttonvex5" class="gamebuttons" title="Click to play">
           <img src="/gamethumbnails/vex5thumb.png" class="gamethumbs" />
