--- a/dialogues/1.html
+++ b/dialogues/1.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="contents">
-        <p>Hey you..</p>
+        <p>(laughs)</p>
     </div>
     <link rel="stylesheet" href="index2.css">
  
