--- a/dialogues/5.html
+++ b/dialogues/5.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="contents">
-        <p>heres 7 games</p>
+        <p>heres 7 games... that have no images</p>
     </div>
     <link rel="stylesheet" href="index2.css">
    
